Fix overflow y on movies with long descriptions

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -78,6 +78,7 @@
   padding: 30px 5px 0 5px;
   left: -55px;
   height: 375px;
+  overflow-y: scroll;
   p {
     font-size: 16px;
   }
